@@ -133,6 +133,14 @@ torch::jit::Node *castToType(torch::jit::Graph *graph,
   return CreateCast<T>{}(graph, value);
 }
 
+torch::jit::Node *createRandomNormal(torch::jit::Graph *graph,
+                                     const std::vector<int64_t> &shape,
+                                     float mean, float scale);
+
+torch::jit::Node *createRandomUniform(torch::jit::Graph *graph,
+                                      const std::vector<int64_t> &shape,
+                                      float high, float low);
+
 // Autogenerated.
 #include "CompilerOps.inc.hpp"
 
