@@ -172,6 +172,30 @@ createCustomOperation(torch::jit::Graph *graph,
   return new_node;
 }
 
+torch::jit::Node *createRandomNormal(torch::jit::Graph *graph,
+                                     const std::vector<int64_t> &shape,
+                                     float mean, float scale) {
+  torch::jit::Node *new_node =
+      createAndInsertNode(graph, symbols::poptorch::random_normal);
+  new_node->is_(c10::attr::shape, shape);
+  new_node->f_(c10::attr::mean, mean);
+  new_node->f_(c10::attr::scale, scale);
+
+  return new_node;
+}
+
+torch::jit::Node *createRandomUniform(torch::jit::Graph *graph,
+                                      const std::vector<int64_t> &shape,
+                                      float high, float low) {
+  torch::jit::Node *new_node =
+      createAndInsertNode(graph, symbols::poptorch::random_uniform);
+  new_node->is_(c10::attr::shape, shape);
+  new_node->f_(c10::attr::high, high);
+  new_node->f_(c10::attr::low, low);
+
+  return new_node;
+}
+
 /*
  * Auto generated operation.
  */
