@@ -45,7 +45,9 @@ are passed into the model wrapper via |anchor_mode| options are Sum, All, Final 
 
 - Adds support for tensor.size
 
-- Adds support for torch.rand
+- Adds support for random sampling operations:
+    torch.rand, torch.uniform_, torch.distributions.Uniform,
+    torch.randn, torch.normal, torch.normal_
 
 - Adds support for torch.clamp
 
